--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -30,13 +30,14 @@ jobs:
             autoconf automake libtool \
             patchutils bison flex \
             libc6-dev \
-            libfreetype6-dev \
+            libfreetype-dev libfreetype6-dev \
             libfontconfig-dev \
+            libdbus-1-dev \
             libx11-dev libxext-dev libxrender-dev \
             libxrandr-dev libxinerama-dev libxcursor-dev \
             libxi-dev libxfixes-dev libxcomposite-dev \
             libsdl2-dev libpulse-dev libasound2-dev \
-            libdbus-1-dev libudev-dev libgl-dev \
+            libudev-dev libgl-dev \
             rsync file zip xz-utils
           sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config || true
 
