--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -22,27 +22,39 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install base deps
+    - name: Install base build dependencies
       run: |
         set -euxo pipefail
+
+        # Обновление кэша пакетов
         sudo apt update
+
+        # Основные инструменты сборки и dev‑пакеты для Wine
         sudo apt install -y --no-install-recommends \
           build-essential git wget curl python3 perl gettext \
           pkgconf cmake ninja-build meson \
-          autoconf automake libtool \
-          patchutils bison flex \
+          autoconf automake libtool patchutils bison flex \
           libc6-dev linux-libc-dev \
-          libfreetype-dev libfreetype6-dev \
-          libfontconfig-dev \
+          libfreetype-dev libfontconfig-dev \
           libdbus-1-dev \
-          libsdl2-dev \
           libx11-dev libxext-dev libxrender-dev \
           libxrandr-dev libxinerama-dev \
           libxcursor-dev libxi-dev libxfixes-dev \
+          libsdl2-dev \
           libpulse-dev libasound2-dev \
           libudev-dev libgl-dev \
+          libusb-1.0-0-dev libpcap-dev \
+          libxcomposite-dev libxdamage-dev \
+          libv4l-dev libopencv-dev \
           rsync file zip xz-utils
+
+        # Убедиться, что pkg-config доступен как pkg-config и pkgconf
         sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config || true
+
+        # Проверка версий инструментов
+        pkg-config --version
+        gcc --version
+        g++ --version
 
     - name: Setup llvm-mingw (prebuilt Linux cross)
       run: |
