--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -56,6 +56,7 @@ jobs:
         gcc --version
         g++ --version
 
+        
     - name: Setup llvm-mingw (prebuilt Linux cross)
       run: |
         set -euxo pipefail
@@ -65,27 +66,33 @@ jobs:
         ASSET="llvm-mingw-${LLVM_MINGW_VERSION}-ucrt-ubuntu-22.04-aarch64.tar.xz"
         URL="https://github.com/mstorsjo/llvm-mingw/releases/download/${LLVM_MINGW_VERSION}/${ASSET}"
 
-        # Очистить старую директорию
+        # Удалить старую директорию
         rm -rf "$ROOT/llvm-mingw"
         mkdir -p "$ROOT/llvm-mingw"
 
         echo "Downloading llvm-mingw from: $URL"
         wget -q "$URL" -O "$ROOT/$ASSET"
 
-        # Распаковать в корень llvm-mingw
+        # Распаковать в llvm-mingw
         tar -xJf "$ROOT/$ASSET" -C "$ROOT/llvm-mingw" --strip-components=1
         rm -f "$ROOT/$ASSET"
 
         # Добавить в PATH
         echo "$ROOT/llvm-mingw/bin" >> "$GITHUB_PATH"
 
-        # Проверка llvm-mingw bin (clang должен быть ELF ARM64)
-        echo "Sanity check: llvm-mingw/bin contents"
+        # Диагностика: проверить формат clang
+        echo "llvm-mingw clang binary:"
         file -L "$ROOT/llvm-mingw/bin/clang" || true
 
-        # Список первых файлов без падения из‑за pipefail
-        ls -1 "$ROOT/llvm-mingw/bin" > "$RUNNER_TEMP/llvm_mingw_bin_list.txt"
-        head -n 60 "$RUNNER_TEMP/llvm_mingw_bin_list.txt"
+        # Безопасный вывод первых строк удобочитаемого списка bin
+        echo "First 60 entries in llvm-mingw/bin:"
+        ls -1 "$ROOT/llvm-mingw/bin" > "$RUNNER_TEMP/llvm_mingw_bin_list.txt" || true
+        head -n 60 "$RUNNER_TEMP/llvm_mingw_bin_list.txt" || true
+
+        # Простейшая проверка доступности основных тулов
+        echo "Check cross‑compiler versions:"
+        aarch64-w64-mingw32-clang --version || true
+        arm64ec-w64-mingw32-clang --version || true"
         
     - name: Verify llvm-mingw cross toolchain
       run: |
